--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+ul{
+    text-align: left;
+}
+
 body {
     background: #333;
     margin: 0;
@@ -25,6 +29,7 @@ h1 {
 #title {
     text-align: center;
 }
+
 
 #img-caption {
     margin: 15px 0 15px 0;
